# RoboMaster-Simulator

./: .gitignore  .gitmodules  .travis.yml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: index.md
src/competition_rl/: CMakeLists.txt  package.xml
src/obstacle_filter/: CMakeLists.txt  package.xml
src/obstacle_filter/include/obstacle_filter/: arena_filter.h  robot_pose.h
src/obstacle_filter/launch/: custom_filtered.launch
src/obstacle_filter/scripts/: arena_filter.py  obstacle_client.py  obstacle_server.py  server.py  test_client.py
src/obstacle_filter/src/: obstacle_filter_node.cpp  python_wrapper.cpp  robot_pose.cpp
src/pointgrey_camera_driver/: .travis.yml
src/puma_motor_driver/: .travis.yml  README.md
src/puma_motor_driver/puma_motor_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/puma_motor_driver/puma_motor_driver/include/puma_motor_driver/: can_proto.h  diagnostic_updater.h  driver.h  gateway.h  message.h  multi_driver_node.h  serial_gateway.h  socketcan_gateway.h
src/puma_motor_driver/puma_motor_driver/launch/: mecanum.launch  omni.launch
src/puma_motor_driver/puma_motor_driver/scripts/: joy_mecanum  joy_omni
src/puma_motor_driver/puma_motor_driver/src/: diagnostic_updater.cpp  driver.cpp  multi_controller_node.cpp  multi_driver_node.cpp  serial_gateway.cpp  socketcan_gateway.cpp
src/puma_motor_driver/puma_motor_driver/test/: fixed_point_test.cpp
src/puma_motor_driver/puma_motor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/puma_motor_driver/puma_motor_msgs/msg/: Feedback.msg  MultiFeedback.msg  MultiStatus.msg  Status.msg
src/ridgeback/: README.md
src/ridgeback/ridgeback_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback/ridgeback_control/config/: control.yaml  local_ekf.yaml  teleop_ps3.yaml  teleop_ps4.yaml
src/ridgeback/ridgeback_control/include/mecanum_drive_controller/: mecanum_drive_controller.h
src/ridgeback/ridgeback_control/launch/: control.launch  teleop.launch
src/ridgeback/ridgeback_control/src/: mecanum_drive_controller.cpp
src/ridgeback/ridgeback_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback/ridgeback_msgs/msg/: Fans.msg  Lights.msg  RGB.msg  Status.msg
src/ridgeback/ridgeback_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback/ridgeback_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
src/ridgeback/ridgeback_navigation/launch/include/: amcl.launch  move_base.launch
src/ridgeback/ridgeback_navigation/maps/: ridgeback_race.yaml
src/ridgeback/ridgeback_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/ridgeback/ridgeback_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/ridgeback_robot/: README.md  rosinstall
src/ridgeback_robot/ridgeback_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback_robot/ridgeback_base/config/: diagnostic_analyzers.yaml
src/ridgeback_robot/ridgeback_base/env-hooks/: 50.ridgeback_find_mag_config.sh
src/ridgeback_robot/ridgeback_base/include/ridgeback_base/: passive_joint_publisher.h  ridgeback_cooling.h  ridgeback_diagnostic_updater.h  ridgeback_hardware.h  ridgeback_lighting.h
src/ridgeback_robot/ridgeback_base/launch/: base.launch
src/ridgeback_robot/ridgeback_base/scripts/: calibrate_compass  compute_calibration
src/ridgeback_robot/ridgeback_base/src/: ridgeback_base.cpp  ridgeback_cooling.cpp  ridgeback_diagnostic_updater.cpp  ridgeback_hardware.cpp  ridgeback_lighting.cpp
src/ridgeback_robot/ridgeback_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback_robot/ridgeback_bringup/launch/: accessories.launch
src/ridgeback_robot/ridgeback_bringup/scripts/: can-udp-bridge.conf  can-udp-bridge.sh  install
src/ridgeback_robot/ridgeback_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback_simulator/: rosinstall
src/ridgeback_simulator/mecanum_gazebo_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback_simulator/mecanum_gazebo_plugin/src/: mecanum_plugin.cpp
src/ridgeback_simulator/ridgeback_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback_simulator/ridgeback_gazebo/launch/: ridgeback_world.launch
src/ridgeback_simulator/ridgeback_gazebo/worlds/: ridgeback_race.world
src/ridgeback_simulator/ridgeback_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ridgeback_simulator/ridgeback_gazebo_plugins/include/ridgeback_gazebo_plugins/: ridgeback_ros_force_based_move.h
src/ridgeback_simulator/ridgeback_gazebo_plugins/src/: ridgeback_ros_force_based_move.cpp
src/ridgeback_simulator/ridgeback_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rm_simulator/: CMakeLists.txt  README.md  package.xml
src/rm_simulator/config/: base_global_planner.yaml  base_local_planner.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner.yaml
src/rm_simulator/launch/: arena.launch  autonomy_exist_map.launch  lidar_detection.launch  one_jackal.launch  one_ridgeback.launch  one_rm_robot.launch  restart.launch  ridgeback_exist_map.launch  ridgeback_robots.launch  rviz.launch
src/rm_simulator/launch/include/: amcl.launch  amcl_ridgeback.launch  move_base.launch
src/rm_simulator/maps/: debuff.pgm  debuff.yaml  indoor_map.pgm  indoor_map.yaml  map2020.pgm  map2020.yaml
src/rm_simulator/msg/: CellStatus.msg  ReferSystemInfo.msg
src/rm_simulator/rviz/: jackal_viz.rviz  ridgeback_viz.rviz
src/rm_simulator/src/: acc2vel.cpp  refer_system.cpp  test.cpp  turret_controller.cpp
src/rm_simulator/srv/: GameState.srv
src/rm_simulator/worlds/: 2020Tag.world  2020map_originsize.world  indoor_room.world  map2020.world
src/rm_simulator/worlds/2020map/: model.config  model.sdf
src/rm_simulator/worlds/2020map_originsize/: model.config  model.sdf
src/rm_simulator/worlds/lima-mars/: model.config  model.sdf
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_teleop/launch/: logitech.launch  (+1 more)
src/strategy/: CMakeLists.txt  package.xml
(+121 files in other folders)
