<?xml version="1.0"?>
<package format="2">
  <name>ridgeback_msgs</name>
  <version>0.2.2</version>
  <description>Messages exclusive to Ridgeback, especially for representing low-level motor commands and sensors.</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ridgeback_msgs</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
