<?xml version="1.0"?>
<package format="2">
  <name>ridgeback_bringup</name>
  <version>0.2.3</version>
  <description>Scripts for installing Ridgeback's robot software.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Ridgeback</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_sick_s300</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>microstrain_3dmgx2_imu</exec_depend>
  <exec_depend>ridgeback_base</exec_depend>
  <exec_depend version_gte="0.1.1">robot_upstart</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
