<?xml version="1.0"?>
<package>
  <name>ridgeback_gazebo</name>
  <version>0.0.3</version>
  <description>Launchfiles to use Ridgeback in Gazebo.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ridgeback_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>ridgeback_gazebo_plugins</run_depend>
  <run_depend>ridgeback_control</run_depend>
  <run_depend version_gte="0.1.6" >ridgeback_description</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
