<?xml version="1.0"?>
<package>
  <name>ridgeback_simulator</name>
  <version>0.0.3</version>
  <description>Packages for simulating Ridgeback.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ridgeback_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ridgeback_gazebo</run_depend>

  <export><metapackage/></export>
</package>
